[build-system]
requires = ['setuptools>=61.0.0','wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'gactions'
version = '0.1.0'
description = 'Demonstrate the usage of github actions.'
readme = 'README.md'
authors = [{name = 'demondancer',email = 'gitgaomail@gmail.com'}]
license = {file = 'LICENSE'}
requires-python = '>=3.11'
#dependencies = ['click >= 8.1.3']

[project.optional-dependencies]
dev = ['black','mypy','pytest','pip-tools']

[project.urls]
Github = 'https://github.com/demondancer/gactions.git'

[project.scripts]
gac = 'gactions.__main__:main'
